--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,16 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
+  <% if flash[:notice] %>
+    <div class="notification is-primary global-notification">
+      <p class="notice"><%= flash[:notice] %></p>
+    </div>
+  <% end %>
+  <% if flash[:alert] %>
+    <div class="notification is-danger global-notification">
+      <p class="alert"><%= flash[:alert] %></p>
+    </div>
+  <% end %>
 
   <body>
     <%= yield %>
