--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,4 +14,21 @@
  *= require_self
  */
 
-@import "bulma"
+@import "bulma";
+
+.nav-brand .title {
+    color: white;
+}
+
+// Round images
+.image {
+    border-radius: 50%;
+    img {
+        border-radius: 50%;
+    }
+}
+
+
+.notification:not(:last-child) {
+    margin-bottom: 0;
+}
