--- a/app/views/tweets/_feed.html.erb
+++ b/app/views/tweets/_feed.html.erb
@@ -1,14 +1,16 @@
 <div class="column is-half">
+  <% if user_signed_in? %>
   <article class="media box">
     <figure class="media-left">
       <p class="image is-64x64">
-        <img src="https://bulma.io/images/placeholders/64x64.png" />
+        <%= gravatar_image_tag(current_user.email, :alt => 'Michael Deering') %>
       </p>
     </figure>
     <div class="media-content">
       <%= render 'tweets/form' %>
     </div>
   </article>
+  <% end %>
 
 
   <% tweets.each do | tweet | %>
@@ -16,25 +18,27 @@
       <article class="media">
         <div class="media-left">
           <figure class="image is-64x64">
-            <img src="https://bulma.io/images/placeholders/64x64.png" />
+            <%= gravatar_image_tag(tweet.user.email, :alt => 'Michael Deering') %>
           </figure>
         </div>
         <div class="media-content">
           <div class="content">
-            <strong>Andy Levernenz</strong><br />
-            <small>@webcrunch</small><br />
+            <strong><%= tweet.user.name %></strong><br />
+            <small>@<%= tweet.user.username %></small><br />
             <p><%= tweet.body %></p>
           </div>
           <nav class="level">
             <div class="level-left is-mobile">
-              <%= link_to tweet, class: 'level-item' do %>
-                <span class="icon"><i class="fa fa-link" aria-hidden="true"></i></span>
-              <% end %>
-              <%= link_to edit_tweet_path(tweet), class: 'level-item' do %>
-                <span class="icon"><i class="fas fa-edit" aria-hidden="true"></i></span>
-              <% end %>
-              <%= link_to tweet, method: :delete, data: { confirm: 'Are you sure you want to delete this tweet?' }, class: 'level-item' do %>
-                <span class="icon"><i class="far fa-trash-alt" aria-hidden="true"></i></span>
+              <% if user_signed_in? && current_user.id == tweet.user_id %>
+                <%= link_to tweet do %>
+                  <span class="icon"><i class="fa fa-link" aria-hidden="true"></i></span>
+                <% end %>
+                <%= link_to edit_tweet_path(tweet) do %>
+                  <span class="icon"><i class="fas fa-edit" aria-hidden="true"></i></span>
+                <% end %>
+                <%= link_to tweet, method: :delete, data: { confirm: 'Are you sure you want to delete this tweet?' } do %>
+                  <span class="icon"><i class="far fa-trash-alt" aria-hidden="true"></i></span>
+                <% end %>
               <% end %>
             </div>
           </nav>
@@ -42,4 +46,5 @@
       </article>
     </div>
   <% end %>
+  <%= render partial: 'partials/simple_pagination', locals: { link_hash: { controller: 'tweets', action: 'index' }, resource: @tweets } %>
 </div>
