--- a/app/views/tweets/_trends.html.erb
+++ b/app/views/tweets/_trends.html.erb
@@ -1,38 +1,6 @@
-<div class="column is-one-quarter">
-  <nav class="panel">
-    <p class="panel-heading">Trends</p>
-    <a class="panel-block">
-      Trend 1
-    </a>
-    <a class="panel-block">
-      Trend 1
-    </a>
-    <a class="panel-block">
-      Trend 1
-    </a>
-    <a class="panel-block">
-      Trend 1
-    </a>
-    <a class="panel-block">
-      Trend 1
-    </a>
-    <a class="panel-block">
-      Trend 1
-    </a>
-    <a class="panel-block">
-      Trend 1
-    </a>
-    <a class="panel-block">
-      Trend 1
-    </a>
-    <a class="panel-block">
-      Trend 1
-    </a>
-    <a class="panel-block">
-      Trend 1
-    </a>
-    <a class="panel-block">
-      Trend 1
-    </a>
-  </nav>
-</div>
+<nav class="panel">
+  <p class="panel-heading">Trends</p>
+  <% @trends.each do | trend | %>
+    <%= link_to "#{trend.tag} (#{trend.count})", tweets_path(trends: trend.id), class: 'panel-block' %>
+  <% end %>
+</nav>
