--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,7 +1,12 @@
 <section class="section">
   <div class="container">
     <div class="columns">
-      <%= render 'trends' %>
+      <div class="column is-one-quarter">
+        <% if user_signed_in? %>
+        <%= render 'profile' %>
+        <% end %>
+        <%= render 'trends' %>
+      </div>
       <%= render 'feed', tweets: @tweets %>
       <%= render 'who_to_follow' %>
     </div>
