--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -1,9 +1,39 @@
-<p id="notice"><%= notice %></p>
+<div class="section">
+  <div class="container">
+    <div class="columns is-centered">
+      <div class="column is-half">
+        <div class="box">
+          <article class="media">
+            <div class="media-left">
+              <figure class="image is-64x64">
+                <%= gravatar_image_tag(@tweet.user.email, :alt => 'Michael Deering') %>
+              </figure>
+            </div>
+            <div class="media-content">
+              <div class="content">
+                <strong><%= @tweet.user.name %></strong><br />
+                <small>@<%= @tweet.user.username %></small><br />
+                <p><%= @tweet.body %></p>
+              </div>
+              <nav class="level">
+                <div class="level-left is-mobile">
+                  <%= link_to @tweet do %>
+                    <span class="icon"><i class="fa fa-link" aria-hidden="true"></i></span>
+                  <% end %>
+                  <%= link_to edit_tweet_path(@tweet) do %>
+                    <span class="icon"><i class="fas fa-edit" aria-hidden="true"></i></span>
+                  <% end %>
+                  <%= link_to @tweet, method: :delete, data: { confirm: 'Are you sure you want to delete this @tweet?' } do %>
+                    <span class="icon"><i class="far fa-trash-alt" aria-hidden="true"></i></span>
+                  <% end %>
+                </div>
+              </nav>
+            </div>
+          </article>
+        </div>
+        <%= link_to 'Back', tweets_path %>
+      </div>
+    </div>
+  </div>
+</div>
 
-<p>
-  <strong>Body:</strong>
-  <%= @tweet.body %>
-</p>
-
-<%= link_to 'Edit', edit_tweet_path(@tweet) %> |
-<%= link_to 'Back', tweets_path %>
