--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,6 +40,7 @@
                 <%= link_to 'Sign up', new_user_registration_path, class: 'button is-info' %>
                 <%= link_to 'Sign in', new_user_session_path, class: 'button is-info' %>
               <% else %>
+                <%= link_to 'Profile', edit_user_registration_path, class: 'button is-info' %>
                 <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: 'button is-info' %>
               <% end %>
             </p>
